# speech_recognizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/speech_recognizer/: __init__.py  audio.py  cli.py  config.py  engine.py  live.py  ros2_node.py  types.py
tests/: test_audio.py
